--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
     <hr>
     <h2>Work Experience</h2>
     <ul>
-        <li>Private Tutor (April 2024 - June 2024) </li>
-        <li>Intern at a Cooperative Bank of Kenya </li>
-        <ul>
-            <li>(July 2024 - August 2024)</li>
-            <li>(June 2025 - August 2024)</li>
-        </ul>
-        <li>Part time web developer</li>
+        <li>Kujaribu tu</li>
     </ul>
     <hr>
     <h2>Skills</h2>
@@ -50,4 +44,5 @@
     <hr>
     <h2></h2>
 </body>
+
 </html>
